; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_gfx_v9_0.c_gfx_v9_0_write_data_to_reg.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_gfx_v9_0.c_gfx_v9_0_write_data_to_reg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.amdgpu_ring = type { i32 }

@PACKET3_WRITE_DATA = common dso_local global i32 0, align 4
@WR_CONFIRM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.amdgpu_ring*, i32, i32, i32, i32)* @gfx_v9_0_write_data_to_reg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gfx_v9_0_write_data_to_reg(%struct.amdgpu_ring* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.amdgpu_ring*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.amdgpu_ring* %0, %struct.amdgpu_ring** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %11 = load %struct.amdgpu_ring*, %struct.amdgpu_ring** %6, align 8
  %12 = load i32, i32* @PACKET3_WRITE_DATA, align 4
  %13 = call i32 @PACKET3(i32 %12, i32 3)
  %14 = call i32 @amdgpu_ring_write(%struct.amdgpu_ring* %11, i32 %13)
  %15 = load %struct.amdgpu_ring*, %struct.amdgpu_ring** %6, align 8
  %16 = load i32, i32* %7, align 4
  %17 = call i32 @WRITE_DATA_ENGINE_SEL(i32 %16)
  %18 = call i32 @WRITE_DATA_DST_SEL(i32 0)
  %19 = or i32 %17, %18
  %20 = load i32, i32* %8, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %5
  %23 = load i32, i32* @WR_CONFIRM, align 4
  br label %25

24:                                               ; preds = %5
  br label %25

25:                                               ; preds = %24, %22
  %26 = phi i32 [ %23, %22 ], [ 0, %24 ]
  %27 = or i32 %19, %26
  %28 = call i32 @amdgpu_ring_write(%struct.amdgpu_ring* %15, i32 %27)
  %29 = load %struct.amdgpu_ring*, %struct.amdgpu_ring** %6, align 8
  %30 = load i32, i32* %9, align 4
  %31 = call i32 @amdgpu_ring_write(%struct.amdgpu_ring* %29, i32 %30)
  %32 = load %struct.amdgpu_ring*, %struct.amdgpu_ring** %6, align 8
  %33 = call i32 @amdgpu_ring_write(%struct.amdgpu_ring* %32, i32 0)
  %34 = load %struct.amdgpu_ring*, %struct.amdgpu_ring** %6, align 8
  %35 = load i32, i32* %10, align 4
  %36 = call i32 @amdgpu_ring_write(%struct.amdgpu_ring* %34, i32 %35)
  ret void
}

declare dso_local i32 @amdgpu_ring_write(%struct.amdgpu_ring*, i32) #1

declare dso_local i32 @PACKET3(i32, i32) #1

declare dso_local i32 @WRITE_DATA_ENGINE_SEL(i32) #1

declare dso_local i32 @WRITE_DATA_DST_SEL(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
